ingress-example/azure-unmanaged-lb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # service.beta.kubernetes.io/port_443_health-probe_request-path: "/health/ready"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: <DOMAIN_NAME>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <SERVICE_NAME>
                port: 
                  number: 80                         
  tls:
  - hosts:
    - <DOMAIN_NAME>
    secretName: <SECRET_NAME>
